--- a/index.html
+++ b/index.html
@@ -25,5 +25,36 @@
       </div>
     </div>
   </div>
+  
+    <div id="Announcment">
+    <div id="AnnouncmentBackground">
+      <div id="AnnouncmentClose" onclick="CloseAnnouncment()">
+        X
+      </div>
+      <div id="AnnouncmentData">
+       <div id="AnnouncmentName">
+         <div id="AnnouncmentNameText">This is the first test announcment</div>
+       </div>
+       <div id="AnnouncmentText">
+          rweoiufioweufklsehfsejfahsdjkfhakjfha
+       </div>
+      </div>
+    </div>
+      
+    <div id="AnnouncmentBackground">
+      <div id="AnnouncmentClose" onclick="CloseAnnouncment()">
+        X
+      </div>
+      <div id="AnnouncmentData">
+       <div id="AnnouncmentName">
+         <div id="AnnouncmentNameText">This is the second test announcment</div>
+       </div>
+       <div id="AnnouncmentText">
+          Hell0o, ynalfkjskfskfhskjfhksldhfklsdhfjksdjfkjjsdfjsdklf
+       </div>
+      </div>
+    </div>
+  </div>
+  
   <div id="version">Version: 0.5</div>
 </body>
