--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Dashboard</title>
+  <link rel="icon" type="image/x-icon" href="/favicon.png>
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
