--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Dashboard</title>
-  <link rel="icon" type="image/x-icon" href="https://fightingox1.github.io/Amazing-Math/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://fightingox1.github.io/Amazing-Math/favion.ico">
   <link rel="stylesheet" href="style.css">
   <script src="script.js"></script>
 </head>
