--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <script src="script.js"></script>
   <style>
     christmas_countdown {
-    display: block;
-    margin: 0 auto;
-    padding: 25px;
+      display: block;
+      margin: auto;
+      padding: 25px;
     }
   </style>
 </head>
@@ -35,5 +35,5 @@
     </div>
   </div>
   
-  <div id="version">Version: 0.51</div>
+  <div id="version">Version: 0.52</div>
 </body>
