--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <style>
     christmas_countdown {
       display: block;
-      margin: auto;
+      margin: 0 auto;
       padding: 25px;
+      display: block;
     }
   </style>
 </head>
@@ -35,5 +36,5 @@
     </div>
   </div>
   
-  <div id="version">Version: 0.52</div>
+  <div id="version">Version: 0.51</div>
 </body>
