--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;" onload="SetUpGames()">
   <div class="header">UNBLOCKED GAMES</div>
-  <iframe width="700" height="360" src="https://w2.countingdownto.com/3924805"  class="christmas_countdown" frameborder="0"></iframe>
+  <div class="christmas_countdown">
+  <iframe width="700" height="360" src="https://w2.countingdownto.com/3924805" frameborder="0"></iframe>
+</div>
   <br>
   <div class="Games" id="GamesList">
 
