--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       margin: 0 auto;
       padding: 25px;
       display: block;
+      text-align: center;
       left:50%;
       transform:translateX(-50%);
     }
@@ -18,7 +19,7 @@
 <body style="font-family: Arial, Helvetica, sans-serif;" onload="SetUpGames()">
   <div class="header">UNBLOCKED GAMES</div>
   <div class="christmas_countdown">
-  <iframe width="700" height="360" src="https://w2.countingdownto.com/3924805" frameborder="0"></iframe>
+  <p align="center"><iframe width="700" height="360" src="https://w2.countingdownto.com/3924805" frameborder="0"></iframe></p>
 </div>
   <br>
   <div class="Games" id="GamesList">
