--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="script.js"></script>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;" onload="SetUpGames()">
-  <div class="snowflakes" aria-hidden="true">
+  <div class="snowflakes" style="color:#fff;" aria-hidden="true">
   <div class="snowflake">
   ❅
   </div>
@@ -42,6 +42,51 @@
   </div>
   <div class="snowflake">
     ❆
+  </div>
+    <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+    ❅
+  </div>
+  <div class="snowflake">
+    ❆
+  </div>
+  <div class="snowflake">
+    ❅
+  </div>
+  <div class="snowflake">
+    ❆
+  </div>
+  <div class="snowflake">
+    ❅
+  </div>
+  <div class="snowflake">
+    ❆
+  </div>
+    <div class="snowflake">
+  ❅
+  </div>
+  <div class="snowflake">
+  ❆
+  </div>
+  <div class="snowflake">
+  ❅
   </div>
 </div>
   <div class="header">UNBLOCKED GAMES</div>
