--- a/index.html
+++ b/index.html
@@ -89,6 +89,13 @@
   ❅
   </div>
 </div>
+  <audio autoplay loop muted id="christmas_music">
+  <source src="Wham! - Last Christmas (Instrumental)-Instrumentals.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
+  <div class="audio_button_div">
+    <a href="#" onclick="mute_muted(); return false;"><img src="mute.png" id="audio_icon"></a>
+  </div>
   <div class="header">UNBLOCKED GAMES</div>
   <div class="christmas_countdown">
   <p align="center"><iframe width="700" height="360" src="https://w2.countingdownto.com/3924805" frameborder="0"></iframe></p>
