--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <script src="script.js"></script>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;" onload="SetUpGames()">
+  <div class="navbar">
+	<center><h2>Amazing-Math will soon be undergoing a URL change.</h2></center>
+  </div>
   <div class="snowflakes" style="color:#fff;" aria-hidden="true">
   <div class="snowflake">
   ❅
