--- a/index.html
+++ b/index.html
@@ -205,7 +205,9 @@
 </div>
   <div class="header">UNBLOCKED GAMES</div>
   <div class="christmas_countdown">
+  <img src="alert.png" id="alert_icon" style="float:left;">
   <p align="center"><iframe width="700" height="360" src="https://w2.countingdownto.com/3924805" frameborder="0"></iframe></p>
+  <img src="alert.png" id="alert_icon" style="float:right;">
 </div>
   <br>
   <div class="Games" id="GamesList">
