--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 </div>
   <div class="header">UNBLOCKED GAMES</div>
   <div class="christmas_countdown">
-  <img src="alert.png" id="alert_icon" style="float:left;">
+  <img src="alert.png" id="alert_icon" style="float:left; pading-top:0.6em; width:25px; height:25px;">
   <p align="center"><iframe width="700" height="360" src="https://w2.countingdownto.com/3924805" frameborder="0"></iframe></p>
-  <img src="alert.png" id="alert_icon" style="float:right;">
+  <img src="alert.png" id="alert_icon" style="float:right; pading-top:0.6em; width:25px; height:25px;">
 </div>
   <br>
   <div class="Games" id="GamesList">
