--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
 </div>
   <div class="header">UNBLOCKED GAMES</div>
   <div class="christmas_countdown">
-  <img src="alert.png" id="alert_icon" style="top:10px; width:60px; height:60px; position:absolute;">
+  <img src="alert.png" id="alert_icon" style="left:20%; top:10px; width:60px; height:60px; position:absolute;">
   <p align="center"><iframe width="700" height="360" src="https://w2.countingdownto.com/3924805" frameborder="0"></iframe></p>
-  <img src="alert.png" id="alert_icon" style="top:1opx; width:60px; height:60px; position:absolute;">
+  <img src="alert.png" id="alert_icon" style="right:20%; top:1opx; width:60px; height:40px; position:absolute;">
 </div>
   <br>
   <div class="Games" id="GamesList">
