--- a/index.html
+++ b/index.html
@@ -229,8 +229,6 @@
   
   <div id="version">Version: 0.52</div>
     <div class="navbar">
-	<img src="alert.png" style="left:17%; bottom:90%; width:60px; height:60px; position:absolute;">
-	<center><h2>Amazing-Math will soon be undergoing a URL change.</h2></center>
-	<img src="alert.png" style="right:17%; width:60px; height:60px; position:absolute;">
+	<center><h2>⚠    Amazing-Math will soon be undergoing a URL change    ⚠</h2></center>
   </div>
 </body>
