--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Dashboard</title>
   <link rel="icon" type="image/x-icon" href="https://du11hjcvx0uqb.cloudfront.net/dist/images/favicon-e10d657a73.ico">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="Settings.css">
   <script src="script.js"></script>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;" onload="SetUpGames()">
@@ -208,6 +209,18 @@
   <p align="center"><iframe width="700" height="360" src="https://w2.countingdownto.com/3924805" frameborder="0"></iframe></p>
 </div>
   <br>
+	
+  <div class="Settings">
+    <img src="Settings.png" alt="SettingsLogo" class="SettingsIco">
+    <div class="SettingsWindow">
+	<div class="SettingsHeader">Settings</div>
+	<hr class="Solid">
+	<div class="Setting">
+	  <div class="SettingName">Play Audio</div>
+	</div>
+    </div>
+  </div>
+	
   <div class="Games" id="GamesList">
   </div>
 
