--- a/index.html
+++ b/index.html
@@ -212,11 +212,14 @@
 	
   <div class="Settings">
     <img src="Settings.png" alt="SettingsLogo" class="SettingsIco">
-    <div class="SettingsWindow">
+    <div class="SettingsWindow SettingsClose">
 	<div class="SettingsHeader">Settings</div>
 	<hr class="Solid">
 	<div class="Setting">
 	  <div class="SettingName">Play Audio</div>
+    <div class="SettingSetting">
+      <button>This is a very cool button</button>
+    </div>
 	</div>
     </div>
   </div>
