--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
 	<div class="Setting">
 	  <div class="SettingName">Play Audio</div>
     <div class="SettingSetting">
-      <img src="Mute.png" id="MuteButton" onclick="MuteUnmute()" alt="SettingsLogo" class="SettingButton_Img">
+      <img src="mute.png" id="MuteButton" onclick="MuteUnmute()" alt="SettingsLogo" class="SettingButton_Img">
     </div>
 	</div>
     </div>
