--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
   <br>
 	
   <div class="Settings">
-    <img src="Settings.png" alt="SettingsLogo" class="SettingsIco">
+    <img src="Settings.png" onclick="OpenCloseSettings()" alt="SettingsLogo" class="SettingsIco">
     <div class="SettingsWindow SettingsClose">
 	<div class="SettingsHeader">Settings</div>
 	<hr class="Solid">
