--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 	
   <div class="Settings">
     <img src="Settings.png" onclick="OpenCloseSettings()" alt="SettingsLogo" class="SettingsIco">
-    <div class="SettingsWindow SettingsClose">
+    <div id="SettingsWindow" class="SettingsWindow SettingsClose">
 	<div class="SettingsHeader">Settings</div>
 	<hr class="Solid">
 	<div class="Setting">
