--- a/index.html
+++ b/index.html
@@ -209,11 +209,13 @@
     <p align="center"><iframe width="700" height="360" src="https://w2.countingdownto.com/3926879" frameborder="0"></iframe></p>
   </div>
   <br>
-	
-  <div id="Audio">
-    <source src="Wham! - Last Christmas (Instrumental)-Instrumentals.mp3" type="audio/mpeg">	  
-  </div>
-	
+  
+  <audio controls autoplay>
+    <div id="Audio">
+      <source src="Wham! - Last Christmas (Instrumental)-Instrumentals.mp3" type="audio/mpeg">	  
+    </div>
+  </audio>
+	  
   <div class="Settings">
     <img src="Settings.png" onclick="OpenCloseSettings()" alt="SettingsLogo" class="SettingsIco">
     <div id="SettingsWindow" class="SettingsWindow SettingsClose">
