--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script src="script.js"></script>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;" onload="SetUpGames()">
-  <div class="snowflakes" style="color:#fff;" aria-hidden="true">
+	
+  <div class="snowflakes" id="Showflakes_Shown" style="color:#fff;" aria-hidden="true">
   <div class="snowflake">
   ❅
   </div>
@@ -223,9 +224,16 @@
 	<hr class="Solid">
 	<div class="Setting">
 	  <div class="SettingName">Play Audio</div>
-    <div class="SettingSetting">
-      <img src="mute.png" id="MuteButton" onclick="MuteUnmute()" alt="SettingsLogo" class="SettingButton_Img">
-    </div>
+	  <div class="SettingSetting">
+	    <img src="mute.png" id="MuteButton" onclick="MuteUnmute()" alt="SettingsLogo" class="SettingButton_Img">
+	  </div>
+	</div>
+	    
+	<div class="Setting">
+	  <div class="SettingName">Snowflake Settings</div>
+	  <div class="SettingSetting">
+	    <button id="HideSnowflakes" onclick="DisableSnowflakes()" class="SettingButton_Button">Hide Snowflakes</button>
+	  </div>
 	</div>
     </div>
   </div>
@@ -249,7 +257,7 @@
     </div>
   </div>
   
-  <div id="version">Version: 0.52</div>
+  <div id="version">Version: 0.6</div>
     <div class="navbar">
 	<center><h2>⚠   Amazing-Math will soon be undergoing a URL change   ⚠</h2></center>
   </div>
