--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <script src="script.js"></script>
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;" onload="SetUpGames()">
+
+<audio id="christmas_music" loop muted autoplay>
+  <source src="https://fightingox1.github.io/Amazing-Math/Wham!%20-%20Last%20Christmas%20(Instrumental)-Instrumentals.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 	
   <div class="snowflakes" id="Showflakes_Shown" style="color:#fff;" aria-hidden="true">
   <div class="snowflake">
