--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="font-family: Arial, Helvetica, sans-serif;" onload="SetUpGames()">
 
-<audio id="christmas_music" loop muted autoplay>
+<audio id="christmas_music" loop muted>
   <source src="https://fightingox1.github.io/Amazing-Math/Wham!%20-%20Last%20Christmas%20(Instrumental)-Instrumentals.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
