--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
            <p>
               <a style="color: #d6f527;">New: </a>Fighter Fun
            </p>
+          </div>
          <div id="hextris" class="game_holder">
            <img src="https://ik.imagekit.io/sjyfpsp1n/portal/html5games/images/tmp/HextrisTeaser.jpg">
            <p>
