--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
            cover = "https://fightingox1.github.io/image_library/Fighter%20Fun.png"
            description = "Amazing Math's new exclusive flappy-bird style game!"
            name = "Fighter Fun"
-           game_url = "Projects/FF/index.html"
+           game_url = "Projects/ff/index.html"
            set_properties(banner, cover, description, name)
          };
           
