--- a/Projects/ff/index.html
+++ b/Projects/ff/index.html
@@ -55,7 +55,7 @@
 	visibility: hidden;
 }
 	
-#above-game {
+.above-game {
   left: 50%;
   top: 2.5%;
   -webkit-transform: translate(-50%, -50%);
@@ -78,8 +78,6 @@
 
     <div class="above-game" id="above-game">
 	<center><button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button" >Home</button></center>
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-      <a class="restart-button">New Game</a>
     </div>
 	
 <div id="dead" style="dead">
