--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
          </div>
            <div id="FF" class="game_holder">
            <img src="https://fightingox1.github.io/image_library/Fighter%20Fun.png">
-           <p>
+           <p style="font-size: 20px">
               <a style="color: #d6f527;">New: </a>Fighter Fun
            </p>
           </div>
