--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
          </div>
            <div id="FF" class="game_holder">
            <img src="https://fightingox1.github.io/image_library/Fighter%20Fun.png">
-           <p style="font-size: 20px">
-              <a style="color: #d6f527;">New: </a>Fighter Fun
+           <p style="font-size: 20px;">
+              <a style="color: #d6f527; font-weight: bold;">New: </a>Fighter Fun
            </p>
           </div>
          <div id="hextris" class="game_holder">
