--- a/Projects/ff/index.html
+++ b/Projects/ff/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Fighter Fun!</title>
+<link rel="stylesheet" href="../../Global.css">
 <style>
 #canvas_main, #canvas_enemy {
 	width: 100%;
