--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            <div id="FF" class="game_holder">
            <img src="https://fightingox1.github.io/image_library/Fighter%20Fun.png">
            <p style="font-size: 20px;">
-              <a style="color: #d6f527; font-weight: bold;">New: </a>Fighter Fun
+              <a style="color: #ecfa28; font-weight: bold;">New: </a>Fighter Fun
            </p>
           </div>
          <div id="hextris" class="game_holder">
