--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <p>Welcome to amazing math</p>
          </div>
            <div id="FF" class="game_holder">
-           <img src="https://fightingox1.github.io/image_library/Fighter%20Fun.png">
+           <img src="https://fightingox1.github.io/image_library/Fighter%20Fun%20.png">
            <p style="font-size: 20px;">
               <a style="color: #ebdb4d; font-weight: bold;">New: </a>Fighter Fun
            </p>
@@ -194,8 +194,8 @@
          ff.onclick = function() {
            play.style.display = 'inline';
            main.style.display = 'none';
-           banner = "https://fightingox1.github.io/image_library/Screenshot%202022-02-02%2011.52.33%20AM.png"
-           cover = "https://fightingox1.github.io/image_library/Fighter%20Fun.png"
+           banner = "https://fightingox1.github.io/image_library/Fighter%20Fun%20banner.png"
+           cover = "https://fightingox1.github.io/image_library/Fighter%20Fun%20.png"
            description = "Amazing Math's new exclusive flappy-bird style game!"
            name = "Fighter Fun"
            game_url = "Projects/ff/index.html"
