--- a/Projects/ff/index.html
+++ b/Projects/ff/index.html
@@ -63,6 +63,12 @@
   text-align: center;
   position: absolute;
 }
+	
+#score_counter {
+ position: fixed;	
+ color: white;
+ font-family: arial;
+}
 </style>
 </head>
 <body>
@@ -80,6 +86,8 @@
     <div class="above-game" id="above-game">
 	<center><button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button" >Home</button></center>
     </div>
+	
+    <div id="score_counter">Score: 0</div>
 	
 <div id="dead" style="dead">
 	<h3 id = "dead_head">You Died</h3>
@@ -201,7 +209,7 @@ obstacle_array[i][1] = sprite_y
 ctx_e.fillRect(sprite_x, sprite_y, obstacle_array[i][2],obstacle_array[i][3]);
 }
 
-
+document.getElementById("score_counter").innerHTML = "Score: " + Math.trunc(player_score);
 
 if(coliders() == "dead" && player_score > 5){
 clearInterval(game_loop);
