--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        <div class="main_game_page_body" id="main_game_page">
          <div id="name_welcome" class="name_welcome">
            <h1>Hello, John Doe</h1>
-           <p>Welcome to amazing math</p>
+           <p>Welcome to Amazing Math</p>
          </div>
            <div class="game_icons">
             <div id="FF" class="game_holder">
