--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            <img class="profile_pic_img" id="profile_pic_img" src="https://i.pinimg.com/originals/47/5a/86/475a86177aeedacf8dc7f5e2b4eff61f.png">
          </a>
         <img src="https://static.thenounproject.com/png/446003-200.png" id="users_select" class="page_select">
-        <img src="https://www.freeiconspng.com/uploads/controller-game-icon-10.png" id="games_select" class="page_select">
+        <img src="https://www.freeiconspng.com/uploads/controller-game-icon-10.png" id="games_select" class="page_select page_selected">
         <img src="https://static.thenounproject.com/png/2206184-200.png" id="chat_select" class="page_select">
        </div>
        <div class="main_game_page_body" id="main_game_page">
