--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
            </div>
           </div>
-       <div class="play_game_page_body" style="display:none;" id="play_game_page">
+       <div class="play_game_page_body body_page" style="display:none;" id="play_game_page">
          <div class="banner_div" id="banner_div">
            <img src="https://fightingox1.github.io/image_library/banner.png" id="banner_img" class="banner_img">
          </div>
@@ -147,7 +147,7 @@
            </div>
          </div>
        </div>
-       <div class="chat_page" id="chat_page" style="display:none">
+       <div class="chat_page body_page" id="chat_page" style="display:none">
          Hello this is a very cool chat page yes yes i don't do drugs.
        </div>
        <div class="coming_soon_body" id="coming_soon_page" style="display:none">
