--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img src="https://www.freeiconspng.com/uploads/controller-game-icon-10.png" id="games_select" class="page_select page_selected">
         <img src="https://static.thenounproject.com/png/2206184-200.png" id="chat_select" class="page_select">
        </div>
-       <div class="main_game_page_body" id="main_game_page">
+       <div class="main_game_page_body body_page" id="main_game_page">
          <div id="name_welcome" class="name_welcome">
            <h1>Hello, John Doe</h1>
            <p>Welcome to Amazing Math</p>
@@ -150,7 +150,7 @@
        <div class="chat_page body_page" id="chat_page" style="display:none">
          Hello this is a very cool chat page yes yes i don't do drugs.
        </div>
-       <div class="coming_soon_body" id="coming_soon_page" style="display:none">
+       <div class="coming_soon_body body_page" id="coming_soon_page" style="display:none">
        <div class="text_area">
        <h1>
        Coming soon!
