--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
          </div>
        </div>
        <div class="chat_page body_page" id="chat_page" style="display:none">
-         Hello this is a very cool chat page yes yes i don't do drugs.
+         Coming Soon - The reason that this is so different from all of the other amazing-math coming soon is because I am working on it - Gregory.
        </div>
        <div class="coming_soon_body body_page" id="coming_soon_page" style="display:none">
        <div class="text_area">
