--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
          </div>
            <div class="game_icons">
             <div id="FF" class="game_holder">
+              <img src="https://fightingox1.github.io/image_library/City%20Builder.png">
+              <p>
+                 <a style="color: #4287f5; font-weight: bold;">In Progress: </a>City Builder Game
+              </p>
+            </div> 
+              
+            <div id="FF" class="game_holder">
               <img src="https://fightingox1.github.io/image_library/Fighter%20Fun%20.png">
               <p>
                  <a style="color: #ebdb4d; font-weight: bold;">New: </a>Fighter Fun
