--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
          </div>
            <div class="game_icons">
             <div id="FF" class="game_holder">
-              <img src="https://fightingox1.github.io/image_library/City%20Builder.png">
+              <img src="https://fightingox1.github.io/image_library/CityBuilder.png">
               <p>
                  <a style="color: #4287f5; font-weight: bold;">In Progress: </a>City Builder Game
               </p>
