--- a/Projects/city_builder/index.html
+++ b/Projects/city_builder/index.html
@@ -7,7 +7,7 @@
   <script type="text/javascript" src="scripts/Input.js"></script>
 </head>
 <body>
-  <div class="above-game" id="above-game">
+  <div class="above-game MakePosFixed CenterButton" id="above-game">
 	  <center><button onclick="location.href = '../../index.html';" id="myButton" class="float-left submit-button" >Home</button></center>
   </div>
   
