--- a/index.html
+++ b/index.html
@@ -124,10 +124,6 @@
              
            </a>
          </div>
-         <div id="branding" class="branding">
-           <h1>Amazing Math</h1>
-           <h2>By something studios</h2>
-         </div>
          <div class="bottom_div" id="bottom_div">
            <img src="https://fightingox1.github.io/image_library/cover.jpg" id="game_cover" class="game_cover">
            <div class="game_play_div" id="game_play_div">
@@ -153,8 +149,12 @@
            </div>
          </div>
        </div>
+       <div id="branding" class="branding">
+         <h1>Amazing Math</h1>
+         <h2>By something studios</h2>
+       </div>
        <div class="chat_page body_page" id="chat_page" style="display:none">
-         Coming Soon - The reason that this is so different from all of the other amazing-math coming soon is because I am working on it - Gregory.
+         <input value="Message..." class="Amazing_math_input" id="chat_message"></input>
        </div>
        <div class="coming_soon_body body_page" id="coming_soon_page" style="display:none">
        <div class="text_area">
