--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <head>
        <title>Dashboard</title>
         <link rel="icon" type="image/x-icon" href="https://du11hjcvx0uqb.cloudfront.net/dist/images/favicon-e10d657a73.ico">
-        <link rel="stylesheet" href="revamp_style.css">
+        <link rel="stylesheet" href="style.css">
      </head>
 
      <body>
