--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
            main.style.display = 'none';
            banner = "http://oyster.ignimgs.com/wordpress/stg.ign.com/2014/02/FlappyBirdReview_020614_1600.jpg"
            cover = "https://upload.wikimedia.org/wikipedia/en/0/0a/Flappy_Bird_icon.png"
-           description = "Your a bird and you have to go in between two poles so that you don't hit them!"
+           description = "Your a bird and you have to go in between two poles so that you don't hit them! (Enter at your own risk, any feelings of rage or discontent are not at the fault of the Amazing Math dev team.)"
            name = "Flappy Bird!"
            game_url = "Projects/FlappyBird/index.html"
            set_properties(banner, cover, description, name)
