--- a/Projects/DogeLava/index.html
+++ b/Projects/DogeLava/index.html
@@ -135,7 +135,7 @@ function genRects(rectnum,maxsize,minsize){
 }
 
 var rock = new Image();
-rock.src = "Rock.jpg";
+rock.src = "Rock.png";
         
 var lava = new Image();
 lava.src = "Lava.jpg";
