--- a/Projects/DogeLava/index.html
+++ b/Projects/DogeLava/index.html
@@ -138,7 +138,7 @@ var rock = new Image();
 rock.src = "Rock.png";
         
 var lava = new Image();
-lava.src = "Lava.jpg";
+lava.src = "Lava.png";
         
 rects = genRects(20,250,50);
 function game(){
