--- a/Projects/DogeLava/index.html
+++ b/Projects/DogeLava/index.html
@@ -40,6 +40,11 @@ button{
   position: fixed;
   color: gray;
   font-size: 25px;
+  
+}
+        
+.PushRight {
+  right: 5px;
 }
     </style>
     <link rel="stylesheet" href="../../Global.css">
@@ -48,7 +53,7 @@ button{
     <div id="Score_Counter">
     Score: 0
     </div>
-    <div onclick="location.href = '../../index.html';" id="myButton" class="MakePosAbs" >Home</div>
+    <div onclick="location.href = '../../index.html';" id="myButton" class="MakePosAbs PushRight" >Home</div>
     <canvas width="500" height="500"></canvas>
     <div id="endscreen" hidden>
         <b>You Died</b>
