--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
        </div>
        <div class="main_game_page_body body_page" id="main_game_page">
          <div id="name_welcome" class="name_welcome">
-           <h1>Hello, Bub</h1>
+           <h1>Hello, User</h1>
            <p>Welcome to Amazing Math</p>
          </div>
            <div class="game_icons">
